--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "meta-ads-saas-sqlite-single",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "type": "module",
   "main": "index.js",
+  "engines": {
+    "node": ">=18 <23"
+  },
   "scripts": {
     "start": "node index.js",
-    "dev": "node --watch index.js"
+    "dev": "node --watch index.js",
+    "check": "node --check index.js"
   },
   "dependencies": {
     "axios": "^1.7.9",
